--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,256 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+td {
+    text-align: center;
+    border: 2px solid rgba(145, 63, 223, 0.979);
+    word-wrap: break-word;
+    
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+    margin-bottom: 30px;
+    background-color: rgba(105, 98, 96, 0.671);
+    margin-top: 20px;
+}
+
+th {
+    width: 100px;
+    border: 2px solid rgba(124, 122, 122, 0.979);
+}
+
+input, .mbs{
+    border: 2px solid rgba(124, 122, 122, 0.979);
+    border-radius: 25px;
+}
+
+#editbutton, #deletebutton {
+    width: 100%;
+    height: 90px;
+}
+
+#carform {
+    justify-content: left;
+    margin-left: auto;
+    margin-right: auto;
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(21, 20, 20, 0.671);
+}
+
+input {
+    margin-right: 10px;
+    padding-left: 13px;
+    margin-bottom: 20px;
+}
+
+#inputBut {
+    padding-left: 3px;
+    padding-right: 3px;
+    border: 2px solid rgba(255, 254, 254, 0.979);
+}
+
+#instructions{
+    text-align: center;
+    padding-top: (30/2)px;
+    width: 495px
+}
+
+#editaddform {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 25px;
+}
+
+#buttoncontainer {
+    margin-top: 30px;
+    width: max-content;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    background-color: rgba(186, 131, 114, 0.671);
+}
+
+#addbutton {
+    width: 700px;
+}
+
+#emptycarform {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+#carformdiv {
+    text-align: left;
+    width: max-content;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(106, 98, 95, 0.671);
+}
+
+#datatable {
+    z-index: -1;
+    width: max-content;
+    margin-left: auto;
+    margin-right: auto;
+    overflow-y: scroll;
+    height: 500px;
+    margin-bottom: 30px;
+}
+
+#question {
+    padding-bottom: 13px;
+}
+
+#modalbuttons {
+    margin-left: auto;
+    margin-right: auto;
+    width: max-content;
+}
+
+#modal {
+    position: absolute;
+    left: 600px;
+    top: 250px;
+    border: 2px solid rgba(92, 89, 89, 0.979);
+    width: 375px;
+    height: 300px;
+    background-color: black;
+    border-radius: 25px;
+    color: white;
+    overflow-wrap: break-word;
+    padding: 15px;
+    overflow-y: auto;
+    animation: fadeIn 1s;
+    -webkit-animation: fadeIn 1s;
+    -moz-animation: fadeIn 1s;
+    -o-animation: fadeIn 1s;
+    -ms-animation: fadeIn 1s;
+}
+
+#modal2 {
+    position: absolute;
+    left: 600px;
+    top: 250px;
+    border: 2px solid rgba(128, 79, 79, 0.979);
+    width: 375px;
+    height: 200px;
+    background-color: black;
+    
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1}
+}
+
+@-moz-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+  
+@-webkit-keyframes fadeIn {
+0% { opacity: 0; }
+100% { opacity: 1; }
+}
+
+@-o-keyframes fadeIn {
+0% { opacity: 0; }
+100% { opacity: 1; }
+}
+
+@-ms-keyframes fadeIn {
+0% { opacity: 0; }
+100% { opacity: 1; }
+}
+
+button {
+    border: 2px solid rgba(255, 254, 254, 0.979);
+    border-radius: 25px;
+}
+
+#dashboard {
+    background-image: url(/src/assets/images/IMG_2637.jpg);
+    background-size: cover;
+    height: 90.5vh;
+    overflow-y: auto;
+}
+
+#cancelbutton {
+    margin-bottom: 20px;
+    width: 490px
+}
+
+#editaddform > label, input {
+    margin-left: auto;
+    margin-right: auto;
+    width: 490px;
+}
+
+input {
+    background-color: black;
+}
+
+#wholehomepage {
+    overflow-y: auto;
+    background-image: url(/src/assets/images/IMG_2637.jpg);
+    background-size: cover;
+}
+
+#wholeloginpage {
+    background-color: aliceblue;
+    border-color: black;
+}
+
+#homeptitlecard{
+    border: 2px solid rgba(255, 254, 254, 0.979);
+    border-radius: 25px;
+    height: 70px;
+    width: 400px;
+    background-color: rgb(164, 140, 140);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px;
+    box-shadow: 2px 2px rgb(31, 30, 29);
+    margin-top: 100px;
+}
+
+#titlewords {
+    width: max-content;
+    margin-left: auto;
+    margin-right: auto;
+    text-shadow: 2px 2px rgb(156, 143, 143);
+}
+
+#headerblock {
+    width: 100%;
+    height: 100px;
+    border-bottom: 4px solid;
+    background-color: black;
+    border-color: rgb(14, 14, 14);
+}
+
+#navlinks {
+    height: 75%;
+    width: 85%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
 }
